--- a/Defuzzyfying.ipynb
+++ b/Defuzzyfying.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -91,31 +91,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.3333333333333333 0.6666666666666666 0 0 0 0\n"
+      "0 0 0.3333333333333333 0.6666666666666666 0 0 0\n"
      ]
     }
    ],
    "source": [
-    "speed_difference = 80\n",
+    "speed_difference = 110\n",
     "NLSD, NMSD, NSSD, ZESD, PSSD, PMSD, PLSD = fuzzifying(speed_difference)\n",
     "print(NLSD, NMSD, NSSD, ZESD, PSSD, PMSD, PLSD)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0 0.5 0.5 0 0 0\n"
+      "0 0 0.16666666666666666 0.8333333333333334 0 0 0\n"
      ]
     }
    ],
    "source": [
-    "accelaration = 105\n",
+    "accelaration = 115\n",
     "NLAC, NMAC, NSAC, ZEAC, PSAC, PMAC, PLAC = fuzzifying(accelaration)\n",
     "print(NLAC, NMAC, NSAC, ZEAC, PSAC, PMAC, PLAC)"
    ]
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,20 +187,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.3333333333333333 0 0 0\n"
+      "0 0 0.16666666666666666 0 0\n"
      ]
     }
    ],
    "source": [
     "PLTC, PMTC, PSTC, NSTC, NLTC = rule(NLSD,NMSD,NSSD,ZESD,PSSD,PMSD,PLSD,NLAC,NMAC,NSAC,ZEAC,PSAC,PMAC,PLAC)\n",
     "print(PLTC, PMTC, PSTC, NSTC, NLTC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def areaTR(mu, a,b,c):\n",
+    "    x1 = mu*(b-a) + a\n",
+    "    x2 = c - mu*(c-b)\n",
+    "    d1 = (c-a); d2 = x2-x1\n",
+    "    a = (1/2)*mu*(d1 + d2)\n",
+    "    return a # Returning area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def areaOL(mu, alpha, beta):\n",
+    "    xOL = beta -mu*(beta - alpha)\n",
+    "    return 1/2*mu*(beta+ xOL), beta/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def areaOR(mu, alpha, beta):\n",
+    "    xOR = (beta - alpha)*mu + alpha\n",
+    "    aOR = (1/2)*mu*((240 - alpha) + (240 -xOR))\n",
+    "    return aOR, (240 - alpha)/2 + alpha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def defuzzyfication(PLTC, PMTC, PSTC, NSTC, NLTC):\n",
+    "    areaPL = 0; areaPM = 0; areaPS = 0; areaNS = 0; areaNL = 0;\n",
+    "    cPL = 0; cPM = 0; cPS = 0; cNS = 0; cNL = 0;\n",
+    "\n",
+    "    if PLTC != 0:\n",
+    "        #areaPL, cPL = areaOR(PLTC, 180, 210)\n",
+    "        areaPL, cPL = areaOR(PLTC, 180, 210)\n",
+    "                \n",
+    "    if PMTC != 0:\n",
+    "        areaPM = areaTR(PMTC, 150, 180, 210)\n",
+    "        cPM = 180\n",
+    "    \n",
+    "    if PSTC != 0:\n",
+    "        areaPS = areaTR(PSTC, 120, 150, 180)\n",
+    "        cPS = 150\n",
+    "          \n",
+    "    if NSTC != 0:\n",
+    "        areaNS = areaTR(NSTC, 60, 90, 120)\n",
+    "        cNS = 90\n",
+    "        \n",
+    "    if NLTC !=0:\n",
+    "        areaNL, cNL = areaOL(NLTC, 30, 60)\n",
+    "        \n",
+    "    numerator = areaPL*cPL + areaPM*cPM + areaPS*cPS + areaNS*cNS + areaNL*cNL\n",
+    "    denominator = areaPL + areaPM + areaPS + areaNS + areaNL\n",
+    "    if denominator ==0:\n",
+    "        print(\"No rules exist to give the result\")\n",
+    "        return 0\n",
+    "    else:\n",
+    "        crispOutput = numerator/denominator\n",
+    "        return crispOutput"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150.0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crispOutputFinal = defuzzyfication(PLTC, PMTC, PSTC, NSTC, NLTC)\n",
+    "crispOutputFinal"
    ]
   },
   {
